[gd_scene load_steps=14 format=3 uid="uid://ehcbna2tcarw"]

[ext_resource type="FontFile" uid="uid://dr7g5bnuqelmi" path="res://assets/fonts/monogram.ttf" id="2_hlqgi"]
[ext_resource type="Script" path="res://src/Scripts/UIController/PowerUpUI.gd" id="3_y74gl"]
[ext_resource type="Texture2D" uid="uid://ba8uirt1mikud" path="res://assets/art/BUDS/Tappy/AirAsia Buds-Turnaround_TAPPY-FRONT.svg" id="4_17n06"]
[ext_resource type="Texture2D" uid="uid://cqs60tvr0jxi1" path="res://assets/art/BUDS/Bam/AirAsia Buds-Turnaround_BAM-FRONT.svg" id="5_vauk3"]
[ext_resource type="Texture2D" uid="uid://dcbtovkr1waq4" path="res://assets/art/BUDS/Biggie/AirAsia Buds-Turnaround_BIGGIE-FRONT.svg" id="6_tnyfb"]
[ext_resource type="Texture2D" uid="uid://cfwh4d3ne6ycy" path="res://assets/art/BUDS/Ogu/AirAsia Buds-Turnaround_OGU-FRONT.svg" id="7_7p62g"]
[ext_resource type="Script" path="res://src/Scripts/UIController/PowerUpIndicator.gd" id="7_m2nxm"]
[ext_resource type="Texture2D" uid="uid://bo7ivwe8opfhh" path="res://assets/ui/CircularProgressBar.png" id="8_1m1qy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6f70e"]
bg_color = Color(1, 0.341176, 0.290196, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_76but"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerUp Upgrade HUD:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Transform2D(1, 0, 0, 1, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8nm14"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerUp Upgrade HUD:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Transform2D(1, 0, 0, 1, 180, 0), Transform2D(1, 0, 0, 1, 0, 0)]
}

[sub_resource type="Animation" id="Animation_pugxg"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerUp Upgrade HUD:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 180, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_guk44"]
_data = {
"RESET": SubResource("Animation_76but"),
"fade_in": SubResource("Animation_8nm14"),
"fade_out": SubResource("Animation_pugxg")
}

[node name="VincentTest" type="Node2D"]

[node name="PowerUp Upgrade HUD" type="CanvasLayer" parent="."]

[node name="PowerUpPanel" type="Control" parent="PowerUp Upgrade HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 79.0
offset_top = 197.0
offset_right = -2.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_y74gl")

[node name="UpgradeBase" type="Panel" parent="PowerUp Upgrade HUD/PowerUpPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -50.5
offset_right = 36.5
offset_bottom = -18.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.720002, 0.720002)
theme_override_styles/panel = SubResource("StyleBoxFlat_6f70e")

[node name="UpgradeLabel" type="Label" parent="PowerUp Upgrade HUD/PowerUpPanel/UpgradeBase"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 96.0
offset_bottom = 16.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_hlqgi")
theme_override_font_sizes/font_size = 32
text = " Upgrade"

[node name="UpgradeDown" type="Panel" parent="PowerUp Upgrade HUD/PowerUpPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -26.5
offset_right = -20.5
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.6609, 3.24212)
theme_override_styles/panel = SubResource("StyleBoxFlat_6f70e")

[node name="CharacterPowerUp" type="VSplitContainer" parent="PowerUp Upgrade HUD/PowerUpPanel"]
layout_mode = 2
offset_left = -51.0
offset_top = 18.0
offset_right = 93.0
offset_bottom = 58.0

[node name="VSplitContainer" type="HSplitContainer" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="PowerUpItem" type="HSplitContainer" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -1

[node name="Sprite2D" type="Sprite2D" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp/VSplitContainer/PowerUpItem"]
position = Vector2(-12, 7)
scale = Vector2(0.02, 0.02)
texture = ExtResource("4_17n06")

[node name="PowerUp Name" type="Label" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp/VSplitContainer/PowerUpItem"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hlqgi")
text = "Luggage Automata"

[node name="PowerUp Duration" type="Label" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp/VSplitContainer/PowerUpItem"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_hlqgi")
text = "5.0s"

[node name="PowerUp1Btn" type="Button" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="CharacterPowerUp2" type="VSplitContainer" parent="PowerUp Upgrade HUD/PowerUpPanel"]
layout_mode = 2
offset_left = -51.0
offset_top = 40.0
offset_right = 93.0
offset_bottom = 80.0

[node name="VSplitContainer" type="HSplitContainer" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp2"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="PowerUpItem" type="HSplitContainer" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp2/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -1

[node name="Sprite2D" type="Sprite2D" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp2/VSplitContainer/PowerUpItem"]
position = Vector2(-12, 7)
scale = Vector2(0.02, 0.02)
texture = ExtResource("5_vauk3")

[node name="PowerUp Name" type="Label" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp2/VSplitContainer/PowerUpItem"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hlqgi")
text = "Time Slow"

[node name="PowerUp Duration" type="Label" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp2/VSplitContainer/PowerUpItem"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_hlqgi")
text = "5.0s"

[node name="PowerUp2Btn" type="Button" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp2/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="CharacterPowerUp3" type="VSplitContainer" parent="PowerUp Upgrade HUD/PowerUpPanel"]
layout_mode = 2
offset_left = -51.0
offset_top = 62.0
offset_right = 93.0
offset_bottom = 102.0

[node name="VSplitContainer" type="HSplitContainer" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp3"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="PowerUpItem" type="HSplitContainer" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp3/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -1

[node name="Sprite2D" type="Sprite2D" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp3/VSplitContainer/PowerUpItem"]
position = Vector2(-12, 7)
scale = Vector2(0.02, 0.02)
texture = ExtResource("6_tnyfb")

[node name="PowerUp Name" type="Label" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp3/VSplitContainer/PowerUpItem"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hlqgi")
theme_override_font_sizes/font_size = 0
text = "Point Frenzy"

[node name="PowerUp Duration" type="Label" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp3/VSplitContainer/PowerUpItem"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_hlqgi")
text = "5.0s"

[node name="PowerUp3Btn" type="Button" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp3/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="CharacterPowerUp4" type="VSplitContainer" parent="PowerUp Upgrade HUD/PowerUpPanel"]
layout_mode = 2
offset_left = -51.0
offset_top = 83.0
offset_right = 93.0
offset_bottom = 123.0

[node name="VSplitContainer" type="HSplitContainer" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp4"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="PowerUpItem" type="HSplitContainer" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp4/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -1

[node name="Sprite2D" type="Sprite2D" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp4/VSplitContainer/PowerUpItem"]
position = Vector2(-12, 7)
scale = Vector2(0.02, 0.02)
texture = ExtResource("7_7p62g")

[node name="PowerUp Name" type="Label" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp4/VSplitContainer/PowerUpItem"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hlqgi")
theme_override_font_sizes/font_size = 0
text = "Luggage FFA"

[node name="PowerUp Duration" type="Label" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp4/VSplitContainer/PowerUpItem"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_hlqgi")
text = "5.0s"

[node name="PowerUp4Btn" type="Button" parent="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp4/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_guk44")
}

[node name="PowerUp Indicator HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="PowerUp Indicator HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_m2nxm")

[node name="Control2" type="Control" parent="PowerUp Indicator HUD/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_right = -30.0
grow_horizontal = 2

[node name="Sprite2" type="Sprite2D" parent="PowerUp Indicator HUD/Control/Control2"]
position = Vector2(9, 20)
scale = Vector2(0.02, 0.02)
texture = ExtResource("5_vauk3")

[node name="ProgressBar2" type="TextureProgressBar" parent="PowerUp Indicator HUD/Control/Control2"]
layout_mode = 0
offset_left = -5.00001
offset_top = 4.03616
offset_right = 295.0
offset_bottom = 304.036
rotation = -0.00120531
scale = Vector2(0.1, 0.1)
value = 50.0
fill_mode = 4
texture_under = ExtResource("8_1m1qy")
texture_progress = ExtResource("8_1m1qy")
tint_under = Color(0, 0, 0, 0)
tint_progress = Color(0.772549, 0.878431, 1, 1)

[node name="Control3" type="Control" parent="PowerUp Indicator HUD/Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 84.0
offset_right = 84.0

[node name="Sprite3" type="Sprite2D" parent="PowerUp Indicator HUD/Control/Control3"]
position = Vector2(23, 20)
scale = Vector2(0.02, 0.02)
texture = ExtResource("6_tnyfb")

[node name="ProgressBar3" type="TextureProgressBar" parent="PowerUp Indicator HUD/Control/Control3"]
offset_left = 7.99998
offset_top = 4.03616
offset_right = 308.0
offset_bottom = 304.036
rotation = -0.00120531
scale = Vector2(0.1, 0.1)
value = 50.0
fill_mode = 4
texture_under = ExtResource("8_1m1qy")
texture_progress = ExtResource("8_1m1qy")
tint_under = Color(0, 0, 0, 0)
tint_progress = Color(0.964706, 0, 0.180392, 1)

[node name="Control1" type="Control" parent="PowerUp Indicator HUD/Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 52.0
offset_right = 52.0

[node name="Sprite1" type="Sprite2D" parent="PowerUp Indicator HUD/Control/Control1"]
position = Vector2(-13, 20)
scale = Vector2(0.02, 0.02)
texture = ExtResource("4_17n06")

[node name="ProgressBar1" type="TextureProgressBar" parent="PowerUp Indicator HUD/Control/Control1"]
offset_left = -29.0
offset_top = 4.03616
offset_right = 271.0
offset_bottom = 304.036
rotation = -0.00120531
scale = Vector2(0.1, 0.1)
value = 50.0
fill_mode = 4
texture_under = ExtResource("8_1m1qy")
texture_progress = ExtResource("8_1m1qy")
tint_under = Color(0, 0, 0, 0)
tint_progress = Color(0.552941, 0.596078, 0.639216, 1)

[node name="Control4" type="Control" parent="PowerUp Indicator HUD/Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 85.0
offset_right = 125.0
offset_bottom = 40.0

[node name="Sprite4" type="Sprite2D" parent="PowerUp Indicator HUD/Control/Control4"]
position = Vector2(56, 20)
scale = Vector2(0.02, 0.02)
texture = ExtResource("7_7p62g")

[node name="ProgressBar4" type="TextureProgressBar" parent="PowerUp Indicator HUD/Control/Control4"]
offset_left = 41.0
offset_top = 4.03616
offset_right = 341.0
offset_bottom = 304.036
rotation = -0.00120531
scale = Vector2(0.1, 0.1)
value = 50.0
fill_mode = 4
texture_under = ExtResource("8_1m1qy")
texture_progress = ExtResource("8_1m1qy")
tint_under = Color(0, 0, 0, 0)
tint_progress = Color(0.94902, 0.384314, 0, 1)

[connection signal="pressed" from="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp/VSplitContainer/PowerUp1Btn" to="PowerUp Upgrade HUD/PowerUpPanel" method="_on_power_up_1_btn_pressed"]
[connection signal="pressed" from="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp2/VSplitContainer/PowerUp2Btn" to="PowerUp Upgrade HUD/PowerUpPanel" method="_on_power_up_2_btn_pressed"]
[connection signal="pressed" from="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp3/VSplitContainer/PowerUp3Btn" to="PowerUp Upgrade HUD/PowerUpPanel" method="_on_power_up_3_btn_pressed"]
[connection signal="pressed" from="PowerUp Upgrade HUD/PowerUpPanel/CharacterPowerUp4/VSplitContainer/PowerUp4Btn" to="PowerUp Upgrade HUD/PowerUpPanel" method="_on_power_up_4_btn_pressed"]
